app/assets/stylesheets/components/_card.scss
.card-product {
  overflow: hidden;
  height: 150px;
  // box-shadow: 0 0 15px rgba(0,0,0,0.2);
  background: $off-white;
  display: flex;
  justify-content: space-between;
  position: relative;
  border-radius: 10px;
  text-decoration: none;
  &:hover {
    background-color: $orange-red-transparent;
  }
}
.card-product-save {
  display: flex;
  font-family: 'Kumbh Sans', sans-serif;
  color: #CCCCCC;
  gap: 16px;
}

.card-product img {
  height: 80%;
  width: 120px;
  object-fit: cover;
  margin: 15px;
  border-radius: 5px;
  align-items: center;
  position: relative;
  justify-content: center;
}

.card-product h2 {
  font-size: 20px;
  font-weight: bold;
  margin: 0;
}

.card-product p {
  font-size: 16px;
  line-height: 1.4;
  margin-bottom: 0;
  margin-top: 8px;
}
.card-product h5 {
  font-size: 15px;
  color: #CCCCCC;
}

.card-product .card-product-infos {
  padding: 13px;
  padding-left: 0;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.card-product-infos {
  align-items: flex-start;
}

.card-product-infos h2 {
  font-family: 'Martel';
  color: $orange-red;
}

.card-product-infos h5 {
  font-family: 'Chivo';
  color: #6B98A8;
}

.card-product-infos p {
  font-family: 'Chivo';
  color: #6B98A8;
}

.card-container a {
  text-decoration: none;
}

.last-chance-container{
  background-color: $off-white;
  width: 100%;
  height: 100%;
  align-items: stretch;
  // box-shadow: 0 0 15px rgba(0,0,0,0.2);
  display: flex;
  flex-direction: column;
  gap: 3px;
  padding: 24px;
  padding-right: 0;
  border-radius: 32px;
  // border: 3px solid $off-white;
  .card-last-chance{
    padding: 0.50em 0;
    margin-bottom: 3px;
    width: 98%;
    overflow: hidden;
    background: $off-white;
    // box-shadow: 0 0 15px rgba(0,0,0,0.2);
    position: relative;
    text-decoration: none;
    color: $black;
    border-bottom: 1px solid $medium-gray;
  }
}

.card-last-chance-outer:last-child .card-last-chance {
  border-bottom: none;
  padding-bottom: 0;
}

.last-chance-container h3 {
  font-family: 'Martel';
  color: $orange-red;
}

.card-last-chance p {
  font-family: 'Chivo';
  color: #6B98A8;
  font-size: 16px;
  font-weight: 500;
  margin: 0;
  width: 60%;
}

.card-last-chance h2 {
  font-size: 12px;
  line-height: 1.4;
  opacity: .7;
  margin-bottom: 0;
  width: 11%;
  text-align: right;
}

.last-chance-row{
  display: flex;
  justify-content: space-between;
  height: 50px;
  align-items: center;
}

.card-what-is {
  padding: 24px;
  .info-text p {
    font-size: 16px;
    color: #343434;
    margin-bottom: 0;
  }
  .info-text a {
    text-decoration: underline;
    color: #6b97a8;
  }
}

.what-is {
  overflow: hidden;
  height: 250px;
  background: transparent;
  box-shadow: 0 0 15px rgba(0,0,0,0.2);
  display: flex;
  justify-content: space-between;
  position: relative;
  border-radius: 10px;
  text-decoration: none;
}

.general-card {
  border: 2px solid $orange-red;
  border-radius: 16px;
  box-shadow: revert;
}

.calendar-icon {
  display: flex;
  margin: 15px;
  align-items: center;
  position: relative;
  justify-content: center;
  color: $orange-red-medium-transparent;
  padding-right: 8px;
  h2 {
    font-size: 17px;
  }
}

.card-voted-container {
  width: 64px;
}

.card-product-save {
  font-family: 'Chivo';
  color: $blue-gray;
  opacity: 0.7;
}

